Layout bug fixes:

--- a/src/static/css/Projects.css
+++ b/src/static/css/Projects.css
@@ -1,10 +1,10 @@
 .projects-grid {
   display: grid;
   justify-items: stretch;
-  grid-gap: 2em;
+  grid-gap: 1em;
   grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
   grid-template-rows: auto;
-  padding: 0 10em;
+  padding: 0 5em;
 }
 
 .project-card-div {
